<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Single Launcher</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name"></string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <plurals name="number_of_items_selected">
        <item quantity="zero">%1$d selected</item>
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="wallpaper_accessibility_name">Wallpaper %1$d of %2$d</string>
    <string name="announce_selection">Selected <xliff:g id="label" example="Wallpaper 3 of 10">%1$s</xliff:g></string>
    <string name="wallpaper_delete">Delete</string>
    <string name="pick_image">Pick image</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="crop_wallpaper">Crop wallpaper</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="widget_adder">Widgets</string>
    <string name="toggle_weight_watcher">Show Mem</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d \u00d7 %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="first_run_cling_title">Welcome!</string>
    <string name="first_run_cling_description">Make yourself at home.</string>
    <string name="first_run_cling_custom_content_hint"></string>
    <string name="first_run_cling_search_bar_hint"></string>
    <string name="first_run_cling_create_screens_hint">Create more screens for apps and folders</string>
    <string name="workspace_cling_title">Organize your space</string>
    <string name="workspace_cling_move_item">Touch &amp; hold background to manage wallpaper, widgets and settings.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="folder_cling_title">Here\'s a folder</string>
    <string name="folder_cling_create_folder">To create one like this, touch &amp; hold an app, then move it over another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="dummy_custom_cling_error_message">Error: custom workspace layout passed in but custom cling was not overwritten</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="custom_workspace_cling_title_1"></string>
    <string name="custom_workspace_cling_description_1"></string>
    <string name="custom_workspace_cling_title_2"></string>
    <string name="custom_workspace_cling_description_2"></string>
    <string name="debug_memory_activity">* HPROF</string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="menu_edit_mode">编辑模式</string>
    <string name="menu_wallpaper">壁纸</string>
    <string name="menu_widget">小部件</string>
    <string name="menu_screen_management">屏幕管理</string>
    <string name="menu_problem_feedback">问题反馈</string>
    <string name="menu_version_update">版本更新</string>
    <string name="menu_launcher_settings">桌面设置</string>
    <string name="menu_system_settings">系统设置</string>
    <string name="menu_light_auto">自动</string>
    <string name="title_base_settings">基本设置</string>
    <string name="title_setas_default_launcher">设为默认桌面</string>
    <string name="title_launcher_layout">桌面布局</string>
    <string name="title_beauty">桌面美化</string>
    <string name="title_theme">主题</string>
    <string name="title_wallpaper">壁纸</string>
    <string name="title_icon">图标</string>
    <string name="title_special_effect">特效</string>
    <string name="title_gesture">手势</string>
    <string name="title_about">关于</string>
	<string name="title_about_system_settings">系统设置</string>
	<string name="title_about_launcher">关于桌面</string>
</resources>